--- a/enchantedviewpager/build.gradle
+++ b/enchantedviewpager/build.gradle
@@ -5,46 +5,13 @@ apply plugin: 'com.github.dcendents.android-maven'
 group='com.tiagosantos'
 version = '1.0.0'
 
-install {
-    repositories.mavenInstaller {
-        pom.project {
-            name 'EchantedViewPager'
-            description 'A custom ViewPager that provides some custom and usefull functionalities, such as, scalling scroll, scrolling with alpha values and swipe to dismiss option.'
-            url 'https://github.com/googlesamples/easygoogle'
-            inceptionYear '2015'
-
-            packaging 'aar'
-            groupId 'com.tiagosantos'
-            artifactId 'echantedviewpager'
-            version '1.0.0'
-
-            licenses {
-                license {
-                    name 'The Apache Software License, Version 2.0'
-                    url 'http://www.apache.org/licenses/LICENSE-2.0.txt'
-                    distribution 'repo'
-                }
-            }
-            scm {
-                connection 'https://github.com/TMSantos/echantedviewpager.git'
-                url 'https://github.com/TMSantos/echantedviewpager'
-
-            }
-            developers {
-                developer {
-                    name 'Tiago Santos'
-                }
-            }
-        }
-    }
-}
-
 bintray {
     user = project.property('bintrayUser')
     key = project.property('bintrayApiKey')
     pkg {
         repo = 'maven'
         name = 'com.tiagosantos.echantedviewpager'
+        userOrg = 'tiagosantos'
 
         version {
             name = '1.0.0'
